feat(adventofcode): spotless day 8